--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Title</th>
       <th>Status</th>
-      <th>Last Updated</th>
+      <th>Updated</th>
       <th colspan="2">Actions</th>
     </tr>
   </thead>
