Cleaner logic for homepage videos, grid spacing

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   padding: 1em;
+  margin-bottom: 24px;
   border: 1px solid darken(white, 10%);
   transition: 200ms ease;
 
