--- a/app/views/shared/_hero.html.erb
+++ b/app/views/shared/_hero.html.erb
@@ -1,4 +1,4 @@
-<% if content_for? :home_hero %>
+<% if @homepage %>
 <section class="hero">
   <video autoplay loop muted auto class="hero-video">
     <source src="<%= video_path 'doodles.webm' %>" type="video/webm">
