Higher quality images

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,7 +10,7 @@
   <div class="project-grid-item" data-project-slug="<%= set.slug %>">
     <div class="project-grid-item-unit-title"><%= "Unit #{set.unit_number}: #{set.unit}" %></div>
     <div class="project-grid-item-image" style="background-image: url(
-      <%= set.project_image.url(:thumb) %>)">
+      <%= set.project_image.url(:medium) %>)">
     </div>
     <div class="project-grid-item-title"><%= set.title %></div>
   </div>
