Board Hero Image, Supporters Page

--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -1,7 +1,7 @@
-<% content_for(:page_title) { ('Partners') } %>
-<% content_for(:hero_content) { "Quote for Pardners." } %>
+<% content_for(:page_title) { ('Supporters') } %>
+<% content_for(:hero_content) { "Quote for Supporters" } %>
 <% content_for(:hero_image) { image_tag 'partners_hero_image.jpg' } %>
-<h1 class="title">Partners</h1>
+<h1 class="title">Community Partners</h1>
 
 <%= image_tag 'partners/pdx-child-art-studio.jpg', class:'partners-image' %>
 <h2> Portland Child Art Studio</h2>
@@ -12,3 +12,11 @@
 <p>Through them, we are able to workshop our projects in actual classes before they are offered online. View available classes here.</p>
 
 <p>If you are interested in signing up for a class, please use the contact page.</p>
+
+<br/>
+<h1 class="title">Donors</h1>
+<p class="lead centered">Something nice about our donors</p>
+<p>Donor Name</p>
+<p>Donor Name</p>
+<p>Donor Name</p>
+<p>Donor Name</p>
