New Data for Projects, Members
Added Featured Artist to Projects
Added LinkedIn Profile to Users

--- a/app/views/admin/members/_form.html.erb
+++ b/app/views/admin/members/_form.html.erb
@@ -40,6 +40,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :linked_in_profile %>
+    <%= f.text_field :linked_in_profile %>
+  </div>
+
+  <div class="field">
     <%= label_tag :role %>
     <select id="role" name="role">
       <%= options_for_select Member.roles.map { |l| [l[0].capitalize, l[1]] }, Member.roles.length %>
