--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -4,6 +4,7 @@
 <%= link_to 'Edit', edit_admin_project_path(@project), class: "btn btn-blue pull-right" %>
 <p><%= image_tag @project.inspiration_image.url(:thumb) %></p>
 <p>Title: <%= @project.title %></p>
+<p>Url: <%= project_link @project %></p>
 <p>Academy: <%= @project.academy %></p>
 <p>
   Overview PDF: <% if @project.overview.present? %> 
@@ -12,6 +13,14 @@
   <%= "#{@project.academy} PDF Not Found" %>
   <% end %>
 </p>
+
+<h3>Featured Artist</h3>
+<p><%= image_tag @project.featured_artist_image.url(:thumb) %></p>
+<p>Featured Artist:</p>
+<div class="well">
+  <%= markdown @project.featured_artist_description %> 
+</div>
+
 <% @project.sections.each do |section| %>
   <div class="well">
     <%= markdown section.content %> 
