--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -5,8 +5,9 @@
 
 <h3>Member</h3>
 <%= image_tag @member.avatar.url(:thumb), class: "img-rounded" %>
-<% %w(name position role).each do |s| %>
-  <p><%= "#{s.titleize}: #{@member.send(s.to_sym).titleize}" %></p>
+<% %w(name position role ).each do |s| %>
+  <p><%= "#{s.titleize}: #{@member.send(s.to_sym).try(:titleize)}" %></p>
 <% end %>
+<p>Linked In Profile: <%= link_to @member.linked_in_profile, @member.linked_in_profile %></p>
 <%= markdown @member.bio %>
 
