--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -18,6 +18,13 @@
 </div>
 
 <div class="aside-content">
+  <% if @project.featured_artist_image.present? %>
+  <h1>Featured Artist</h1>
+  <div class="featured-artist">
+    <%= image_tag @project.featured_artist_image.url(:medium) %>
+    <%= markdown @project.featured_artist_description %>
+  </div>
+  <% end %>
   <div class="project-section" id="lessons">
     <h1>Lessons</h1>
     <% @project.lessons.each do |lesson| %>
