--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,10 +1,9 @@
 <% content_for(:page_title) { ('About') } %>
-<% content_for(:hero_content) { 'From building blocks to blueprints, Doodles is there to help create the lessons that turn your students into their most expressive selves.' } %>
+<% content_for(:hero_content) { 'About' } %>
 <% content_for(:hero_image) { image_tag 'about_hero_image.jpg' } %>
 
 <div class="wrapper">
 
-<h1 class="title">About</h1>
 <p class="lead">Doodles works to eliminate the barriers that too many teachers have in providing a high-quality arts education to their students. By creating an inventory of thoughtful and engaging art lessons, teachers assemble their curriculum-choosing the projects and activities they know are best for their students- and Doodles does the details. </p>
 
 
