--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,6 +1,7 @@
 <% content_for(:page_title) { ('Contact') } %>
+<% content_for(:hero_content) { 'Contact' } %>
+<% content_for(:hero_image) { image_tag 'contact_hero_image.jpg' } %>
 
 <div class="wrapper">
-<h1>Contact</h1>
 
 </div>
