--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:page_title) { ('Supporters') } %>
-<% content_for(:hero_content) { "Quote for Supporters" } %>
+<% content_for(:hero_content) { "Supporters" } %>
 <% content_for(:hero_image) { image_tag 'partners_hero_image.jpg' } %>
 <h1 class="title">Community Partners</h1>
 
