--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:page_title) { ('Team') } %>
-<% content_for(:hero_content) { "Quote for the team." } %>
+<% content_for(:hero_content) { "Team" } %>
 <% content_for(:hero_image) { image_tag 'board_hero_image.jpg' } %>
 
 <h1 class="title">The Board</h1>
