--- a/app/views/home/board.html.erb
+++ b/app/views/home/board.html.erb
@@ -1,8 +1,7 @@
 <% content_for(:page_title) { ('Our Board') } %>
-<% content_for(:hero_content) { "Quote for the board." } %>
+<% content_for(:hero_content) { "Our Board" } %>
 
 <div class="wrapper">
-<h1>Our Board</h1>
 <section class="boardmember">
   <div class="portrait">
     <%= image_tag 'portraits/tempest' %>
