changed fonts and made navbar solid

--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -1,7 +1,6 @@
 <% content_for(:page_title) { ('Supporters') } %>
-<% content_for(:hero_content) { "Supporters" } %>
+<% content_for(:hero_content) { "Community Partners" } %>
 <% content_for(:hero_image) { image_tag 'partners_hero_image.jpg' } %>
-<h1 class="title">Community Partners</h1>
 
 <%= image_tag 'partners/pdx-child-art-studio.jpg', class:'partners-image' %>
 <h2> Portland Child Art Studio</h2>
