--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -21,6 +21,10 @@ body {
   @include primary-font;
 }
 
+p {
+  font-size: 16px;
+}
+
 h1, h2, h3, h4, h5, h6 {
   @include primary-font;
 }
@@ -54,14 +58,11 @@ img.height {
   text-transform: uppercase;
 }
 
+.lead {
+  font-weight: 500;
+}
+
 #no-hero {
   background-color: transparent;
   height: 100px;
 }
-
-
-
-
-
-
-
