--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,5 @@
 <% content_for(:page_title) { ('Projects') } %>
-<% content_for(:hero_content) { 'We create the map. You choose the direction.' } %>
-<% content_for(:hero_image) { image_tag 'top_hero_image.jpg' } %>
+<% content_for(:hero_image) { image_tag 'project_hero_image.jpg' } %>
 
 <h1 class="title">Click on a project to begin</h1>
 <p class="sub title"><a data-toggle="modal" data-modal-id="modal-units">What are units?</a></p>
