--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,8 +1,7 @@
 <% content_for(:page_title) { ('Team') } %>
-<% content_for(:hero_content) { "Quote for the team." } %>
-<% content_for(:hero_image) { image_tag 'board_hero_image.jpg' } %>
+<% content_for(:hero_image) { image_tag 'team_hero_image.jpg' } %>
 
-<h1 class="title">The Board</h1>
+<h2 class="centered">The Board</h2>
 
 <div class="member-grid">
 <% @board_members.each do |member| %>
@@ -12,7 +11,7 @@
 <% end %>
 </div>
 
-<h1 class="title">Volunteers</h1>
+<h2 class="centered">Volunteers</h2>
 
 <div class="member-grid">
 <% @volunteer_members.each do |member| %>
