--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -20,8 +20,9 @@ $input-purple: #57528C;
 
 $background-blue: #599FD2;
 
+$project-header-blue: #8DC5E6;
+
 // Miscellaenous variables
 //
 $content-max-width: 800px;
 $content-min-width: 480px;
-
