--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -17,7 +17,7 @@
   position: relative;
   width: 50%;
   margin: 5% auto;
-  tranform: translateY(-50%);
+  transform: translateY(-50%);
   background-color: darken(white, 5%);
   padding: 2em;
 }
