--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -1,6 +1,6 @@
 .quote-contents {
   @include primary-font;
-  font-size: 1.2em;
+  font-size: 20px;
   line-height: 1.6em;
   font-weight: 300;
   font-style: italic;
