Optimize Images, Adjust paths, center Classes Img

--- a/app/views/home/classes.html.erb
+++ b/app/views/home/classes.html.erb
@@ -1,15 +1,10 @@
 <% content_for(:page_title) { ('PDX Classes') } %>
-<% content_for(:hero_content) { "PDX Classes" } %>
-<% content_for(:hero_image) { image_tag 'classes_hero_image.jpg' } %>
+<% content_for(:hero_image) { image_tag 'heros/classes' } %>
 
-
-<section class="wrapper">
-
-  <p class="lead">
-  Through a partnership with the <%= link_to "Portland Child Art Studio", partners_path %> we are able to workshop classes in the PCAS studio space in Portland, Oregon. The classes are offered free of charge to the Portland Community. Class size is very limited, so <%= link_to "contact us", contact_path %> to check availability.
-  </p>
-  <p class="lead">
-    PCAS is located at 1819 NW Everett Street.
-  </p>
-  <%= image_tag "classes.png" %>
-</section>
+<p class="lead">
+Through a partnership with the <%= link_to "Portland Child Art Studio", supporters_path %> we are able to workshop classes in the PCAS studio space in Portland, Oregon. The classes are offered free of charge to the Portland Community. Class size is very limited, so <%= link_to "contact us", contact_path %> to check availability.
+</p>
+<p class="lead">
+  PCAS is located at 1819 NW Everett Street.
+</p>
+<%= image_tag "classes/pdx_class.png", style:"display: block; margin: 0 auto;" %>
