--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:page_title) { 'Team' } %>
-<% content_for(:hero_image) { image_tag 'team_hero_image.jpg' } %>
+<% content_for(:hero_image) { image_tag 'heros/team' } %>
 
 <h2 class="centered">The Board</h2>
 
