--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:page_title) { 'Projects' } %>
-<% content_for(:hero_image) { image_tag 'project_hero_image.jpg' } %>
+<% content_for(:hero_image) { image_tag 'heros/project' } %>
 
 <h1>Projects</h1>
 <% @projects.each do |set| %>
