--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,5 @@
 <% content_for(:page_title) { ('About') } %>
-<% content_for(:hero_image) { image_tag 'about_hero_image.jpg' } %>
-
-<div class="wrapper">
+<% content_for(:hero_image) { image_tag 'heros/about' } %>
 
 <p class="lead">Doodles works to eliminate the barriers that too many teachers have in providing a high-quality arts education to their students. By creating an inventory of thoughtful and engaging art lessons, teachers assemble their curriculum-choosing the projects and activities they know are best for their students- and Doodles does the details. </p>
 
@@ -10,4 +8,3 @@
 <p>Eventually, she  took a position at a growing charter school in Brooklyn and was exposed to the challenges teachers and art teachers alike face in implementing curriculum. The time-demands on the profession make it difficult to craft meaningful assignments that engage and challenge all students. In the rare school that has an established art program, art teachers are challenged with back-to-back classes, grading, and standards demands that devour any time they might use to craft a meaningful curriculum.</p>
 <p>In schools without an art program, the situation is much more bleak. Inevitably teachers or volunteers step in to teach art, recognizing its importance. However, these well-intentioned individuals are untrained, and rely on step-by-step tutorials or craft projects that don’t challenge students to solve problems, or to think independently or critically.</p> <p>At her charter school, Tempest developed an idea of what it would take to create a curriculum that was engaging and challenging to students; not a product based curriculum, but one that demanded critical, flexible, and creative thinking skills,  yet remained manageable for even those teachers untrained in the arts.</p> <p>And that's really where Doodles was conceived.</p> <p>Here we are - seeking to help the classroom teacher become the art teacher, without breaking the bank or costing hours of planning.</p>
 <p>While there is no replacement for talented and trained art teachers, Doodles Academy helps to create more equitable access to a quality arts education by developing and promoting high-quality, open-ended, and replicable art experiences for elementary aged kids, which align to the common core standards whenever possible. Through online video lessons and accompanying instructional content, Doodles Academy works to support this next generation of creative and adaptive thinkers.</p>
-</div>
