--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:page_title) { ('Contact') } %>
-<% content_for(:hero_image) { image_tag 'contact_hero_image.jpg' } %>
+<% content_for(:hero_image) { image_tag 'heros/contact' } %>
 
 <h2>Contact</h2>
 
