--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -1,5 +1,7 @@
 .modal {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   visibility: hidden;
   opacity: 0;
   @include fixed-position;
@@ -16,7 +18,6 @@
 .modal-content {
   position: relative;
   width: 50%;
-  margin: 5% auto;
   transform: translateY(-50%);
   background-color: darken(white, 5%);
   padding: 2em;
