--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -28,8 +28,7 @@
     <div class="modal-title">
       <h2 class="modal-member-name"></h2>
     </div>
-    <div class="modal-body">
-
-    </div>
+    <div class="modal-baby-picture"></div>
+    <div class="modal-body"></div>
   </div>
 </div>
