--- a/app/views/home/classes.html.erb
+++ b/app/views/home/classes.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:page_title) { ('PDX Classes') } %>
-<% content_for(:hero_image) { image_tag 'heros/classes' } %>
+<% content_for(:hero_image) { image_tag 'heros/classes.jpg' } %>
 
 <p class="lead">
 Through a partnership with the <%= link_to "Portland Child Art Studio", supporters_path %> we are able to workshop classes in the PCAS studio space in Portland, Oregon. The classes are offered free of charge to the Portland Community. Class size is very limited, so <%= link_to "contact us", contact_path %> to check availability.
