--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:page_title) { 'Community Supporters' } %>
-<% content_for(:hero_image) { image_tag 'heros/partners' } %>
+<% content_for(:hero_image) { image_tag 'heros/partners.jpg' } %>
 
 <%= image_tag 'partners/pdx-child-art-studio.jpg', class:'partners-image' %>
 <h2> Portland Child Art Studio</h2>
