--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
   </section>
 
   <section class="hero quote">
-    <%= image_tag 'quote/quote_map', class:"hero-img" %>
+    <%= image_tag 'quotes/quote_image.jpg', class:"hero-img" %>
     <div class="hero-content">
       <div class="quote-contents"></div>
     </div>
