Larger homepage hero, About Us changed

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:page_title) { ('About') } %>
+<% content_for(:page_title) { ('About Us') } %>
 <% content_for(:hero_image) { image_tag 'heros/about.jpg' } %>
 
 <p class="lead">Doodles works to eliminate the barriers that too many teachers have in providing a high-quality arts education to their students. By creating an inventory of thoughtful and engaging art lessons, teachers assemble their curriculum-choosing the projects and activities they know are best for their students- and Doodles does the details. </p>
