--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:hero_content) { 'We make art education more accessible to teachers and students.' } %>
+<% content_for(:hero_content) { 'Students aren\'t carbon copies. Why should their art be?' } %>
 
 <div class="homepage">
  <section class="homepage-section">
