--- a/app/assets/stylesheets/hero.scss
+++ b/app/assets/stylesheets/hero.scss
@@ -10,6 +10,23 @@
   overflow: hidden;
 }
 
+.hero-homepage {
+  max-height: 700px;
+  &::after {
+    position: absolute;
+    content: ' ';
+    bottom: 20px;
+    left: 50%;
+    opacity: 0.8;
+    border-right: solid white;
+    border-bottom: solid white;
+    border-width: 2px;
+    transform: rotate(0.125turn) translate3d(-50%, 0, 0);
+    width: 30px;
+    height: 30px;
+  }
+}
+
 .hero-video,
 .hero > img {
   opacity: 0.5;
@@ -50,13 +67,14 @@
   left: 50%;
   transform: translate3d(-50%, 0%, 0);
   text-transform: uppercase;
-  letter-spacing: 0.1em;
 }
 
 .hero-title {
   font-weight: 100;
   font-size: 72px;
 }
+
+.hero-subtitle {}
 
 .hero-content,
 .hero-title,
