--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,14 +1,16 @@
-.homepage {
-  text-align: center;
-}
+.homepage {}
 
 .title {
   text-align: center;
 }
 
 .homepage-section {
-  padding: 3em 0;
-  margin-top: 24px;
+  padding: 50px 0;
+}
+
+
+.homepage-section.hero {
+  padding: 0;
 }
 
 .homepage-content {
@@ -16,13 +18,25 @@
   margin: 0 auto;
   padding-bottom: 2em;
 
-  p:not(.lead) {
+  .lead {
+    font-size: 28px;
+    font-weight: 300;
+    text-align: justify;
+  }
+
+  p {
     font-size: 1.2em;
   }
 
   h2 {
     font-size: 26px;
     font-weight: 500;
+    &.jumbo {
+      font-size: 60px;
+      font-weight: 400;
+      line-height: 60px;
+      padding-bottom: 10px;
+    }
   }
 
 }
@@ -42,12 +56,10 @@
     height: auto;
     margin: 0;
     transition: opacity 300ms ease;
-
   }
 
   &:hover {
     cursor: pointer;
-
     img {
       opacity: 0.4;
     }
