--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,29 +7,36 @@
         <iframe src="<%= @intro_video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
       <p class="lead">
-        Doodles Academy is a digital inventory of easy-to-use art lessons for teachers and students. Our mission is to provide art lessons which inspire students to meet their creative potential.
+        Our mission is to expand children's access to high-quality arts education; we work to remove barriers for educators, and strive to make it easy to offer excellence.
       </p>
-      <div class="centered" style="height: 80px; margin: 40px 0;">
-        <%= image_tag 'doodle_hand_yellow.png', class: 'height'%>
-      </div>
-      <h2>Featured Videos</h2>
-      <div class="homepage-gallery">
-        <% @featured_lessons.each do |lesson| %>
-        <%= render "shared/lesson_gallery", lesson: lesson %>
-        <% end %>
-      </div>
-      <div class="gallery-tools">
-        <div class="gallery-tools-next"></div>
-        <div class="gallery-tools-prev"></div>
-      </div>
-      <div class="centered" style="margin: 80px 0;">
-        <%= link_to "See More Projects", projects_path, class: "btn btn-large btn-orange" %>
-      </div>
-      <h2>Making Art Education More Accessible</h2>
-      <p>Doodles Academy works to eliminate the barriers that too many teachers have in providing a high-quality arts education to their students. By creating an inventory of thoughtful and engaging art lessons, teachers assemble their curriculum-choosing the projects and activities they know are best for their students- and Doodles Academy takes care of the details.</p>
     </div>
   </section>
 
+  <section class="homepage-section hero">
+    <%= image_tag 'quotes/quote_image.jpg', class:"hero-img" %>
+    <h2 class='jumbo'>
+      Art lessons that inspire real creativity.
+    </h2>
+    <p class='lead'>
+      Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
+    </p>
+  </section>
+  <section class="homepage-section">
+    <div class="homepage-content">
+      <h2 class='jumbo'>
+        We make high-quality art education easy.
+      </h2>
+      <div>
+        <p class='lead'>
+          Doodles Academy brings art education to more students. We provide a free online curriculum and partner with schools in order to bring art classes where there would otherwise be none.
+        </p>
+      </div>
+      <div style='text-align: right;'>
+        <a class="btn btn-xl btn-red" href='/projects'>
+          Go to Lesson Plans
+        </a>
+      </div>
+  </section>
   <section class="hero quote">
     <%= image_tag 'quotes/quote_image.jpg', class:"hero-img" %>
     <div class="hero-content">
@@ -37,21 +44,22 @@
     </div>
     <div class="quote-selector"></div>
   </section>
-
- <section class="homepage-section">
+  <section class="homepage-section bg-accent-green">
     <div class="homepage-content">
       <!-- <h2 style="font-size: 26px; font-weight: 500;"> -->
-      <h2>
-        Art Education is Failing in America.
+      <h2 class='jumbo'>
+        Every student deserves art.
       </h2>
       <div>
-        <p>"In just over two decades, there has been a nearly 50% decrease in access to arts education for students of color. Our vision is that every child should receive a holistic arts education, irrespective of school, budget, zip code, or student demographics."</p>
-        <p style="font-size: 14px; margin-top: -10px;">
-          <a target="_blank" href="http://issuu.com/arts_link/docs/afta_nav_factsfigs_v1">Arts Education Navigator. Issuu. Americans for the Arts, 2012. Web. 24 Nov. 2015.</a>
+        <p class='lead'>
+         Our vision is that every child receives an arts education that inspires and rewards student creativity, growth and problem solving, irrespective of school budget, zip code, or student demographics. 
+        </p>
+        <p class='lead'>
+         Donations help us develop and offer our free classes and free online curriculum, bringing quality art education to students everywhere.
         </p>
       </div>
-      <div class="centered" style="margin: 30px 0 0;">
-        <a class="btn btn-large btn-blue" >
+      <div style='text-align: right;'>
+        <a class="btn btn-xl btn-white" >
           Donate Now
         </a>
       </div>
